@@ -37,6 +37,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        
         <glassfish.version>${project.version}</glassfish.version>
         <glassfish.root>${project.build.directory}</glassfish.root>
         <glassfish.home>${glassfish.root}/glassfish8</glassfish.home>
@@ -60,6 +61,25 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
+        
+        <!-- Dependencies for our archive enhancer (org.glassfish.servlet.tck.WebArchiveUpdater) to compile -->
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-container-test-spi</artifactId>
+        </dependency>
+         <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-container-test-impl-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
+        </dependency>
+
 
         <!-- Jakarta Servlet TCK -->
         <dependency>
@@ -76,25 +96,11 @@
             <scope>test</scope>
         </dependency>
 
-
-        <!--
-            The Arquillian connector that starts GlassFish and deploys archives to it.
-        -->
-        <dependency>
-            <groupId>org.omnifaces.arquillian</groupId>
-            <artifactId>arquillian-glassfish-server-managed</artifactId>
-            <version>1.4</version>
-            <scope>test</scope>
-        </dependency>
-
+        <!-- Junit 5 -->
         <dependency>
             <groupId>org.jboss.arquillian.junit5</groupId>
             <artifactId>arquillian-junit5-container</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -107,12 +113,23 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <!--  Signature Test Plugin  -->
+        
+        <!-- Dependency for the API signature test -->
         <dependency>
-            <groupId>org.netbeans.tools</groupId>
+            <groupId>jakarta.tck</groupId>
             <artifactId>sigtest-maven-plugin</artifactId>
-            <version>1.7</version>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <!--
+            The Arquillian connector that starts GlassFish and deploys archives to it.
+        -->
+        <dependency>
+            <groupId>org.omnifaces.arquillian</groupId>
+            <artifactId>arquillian-glassfish-server-managed</artifactId>
+            <version>1.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -129,14 +146,16 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>unpack-glassfish</id>
-                        <phase>test-compile</phase>
+                        <id>unpack-glassfish-and-certs</id>
+                        <phase>generate-test-resources</phase>
                         <goals>
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
                             <markersDirectory>${glassfish.root}/dependency-maven-plugin-markers</markersDirectory>
                             <artifactItems>
+                                
+                                <!-- Extract GlassFish -->
                                 <artifactItem>
                                     <groupId>org.glassfish.main.distributions</groupId>
                                     <artifactId>${glassfish-artifact-id}</artifactId>
@@ -145,7 +164,66 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${glassfish.root}</outputDirectory>
                                 </artifactItem>
+
+                                <!-- Extract certificates -->
+                                <artifactItem>
+                                    <groupId>jakarta.tck</groupId>
+                                    <artifactId>servlet-tck-runtime</artifactId>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.testOutputDirectory}/</outputDirectory>
+                                    <includes>**/**cts_cert,**/**clientcert.jks,**/**clientcert.p12</includes>
+                                </artifactItem>
                             </artifactItems>
+                        </configuration>
+                    </execution>
+                    
+                    <execution>
+                        <id>copy-api</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <!-- 
+                                    The main Servlet API artefact to test. This must match exactly the jar
+                                    that's also included in the GlassFish build we're testing. 
+                                -->
+                                <artifactItem>
+                                    <groupId>jakarta.servlet</groupId>
+                                    <artifactId>jakarta.servlet-api</artifactId>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/</outputDirectory>
+                                    <destFileName>jakarta.servlet-api.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <!-- Import the certificate that's used for the two tests that test SSL/Certificare authentication -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>keytool-maven-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>importCertificate</goal>
+                        </goals>
+                        <configuration>
+                            <file>${project.build.testOutputDirectory}/certificates/cts_cert</file>
+                            <alias>cts</alias>
+                            <keystore>${glassfish.root}/glassfish8/glassfish/domains/domain1/config/cacerts.jks</keystore>
+                            <storepass>changeit</storepass>
+                            <keypass>changeit</keypass>
+                            <noprompt>true</noprompt>
+                            <trustcacerts>true</trustcacerts>
+                            <verbose>true</verbose>
                         </configuration>
                     </execution>
                 </executions>
@@ -155,23 +233,55 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                          -Duser.language=en 
+                          -Duser.country=US 
+                          -Djava.locale.providers=COMPAT,CLDR
+                    </argLine>
+                    
                     <dependenciesToScan>
                         <dependenciesToScan>jakarta.tck:servlet-tck-runtime</dependenciesToScan>
                     </dependenciesToScan>
+                    
                     <systemProperties>
                         <glassfish.home>${glassfish.root}/glassfish8</glassfish.home>
 
+                        <arquillian.xml>${project.basedir}/arquillian.xml</arquillian.xml>
+                        
+                        <javax.net.ssl.keyStore>${project.build.testOutputDirectory}/certificates/clientcert.jks</javax.net.ssl.keyStore>
+                        <javax.net.ssl.keyStorePassword>changeit</javax.net.ssl.keyStorePassword>
+                        <javax.net.ssl.trustStore>${glassfish.root}/glassfish8/glassfish/domains/domain1/config/cacerts.jks</javax.net.ssl.trustStore>
+                        
+                        <!-- Uncomment to debug client-side SSL
+                        <javax.net.debug>ssl:handshake</javax.net.debug>
+                        -->
 
-                        <!-- If the servlet container doesn't support optional cross context -->
+                        <!-- If the servlet container doesn't (want to) support optional cross context -->
                         <servlet.tck.support.crossContext>false</servlet.tck.support.crossContext>
 
-                        <!-- If the servlet container doesn't support optional http2 push -->
+                        <!-- If the servlet container doesn't (want to) support optional http2 push -->
                         <servlet.tck.support.http2Push>false</servlet.tck.support.http2Push>
                         
+                        <!-- Print the content of the deployed archives -->
+                        <servlet.tck.archive.print>true</servlet.tck.archive.print>
+                        
+                        <!-- 
+                           JDK 11 in TLSv1.3 does not support Post-Handshake Authentication, so TLSv1.2 must be used
+                           for client-cert authentication to work.
+                           
+                           See: https://stackoverflow.com/a/65979678/472792
+                        -->
+                        <jdk.tls.client.protocols>TLSv1.2</jdk.tls.client.protocols>
+                        
+                        <!-- Create the users for the various security (authentication tests) -->
                         <glassfish.postBootCommands>
-                            create-file-user --groups Manager:Employee --passwordfile ${maven.multiModuleProjectDirectory}/javajoe.pass javajoe
-                            create-file-user --groups Administrator:Employee --passwordfile ${maven.multiModuleProjectDirectory}/j2ee.pass j2ee
+                            create-file-user --groups Manager:Employee --passwordfile ${project.basedir}/javajoe.pass javajoe
+                            create-file-user --groups Administrator:Employee --passwordfile ${project.basedir}/j2ee.pass j2ee
                         </glassfish.postBootCommands>
+                        
+                        <!-- Set the properties for the API signature test -->
+                        <jimage.dir>${project.build.directory}/jdk-bundle</jimage.dir>
+                        <sigTestClasspath>${project.build.directory}/jakarta.servlet-api.jar:${project.build.directory}/jdk-bundle/java.base:${project.build.directory}/jdk-bundle/java.rmi:${project.build.directory}/jdk-bundle/java.sql:${project.build.directory}/jdk-bundle/java.naming</sigTestClasspath>
                     </systemProperties>
                 </configuration>
             </plugin>
